[gd_scene load_steps=61 format=2]

[ext_resource path="res://Sprites/EL_TAQUERO.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Cosas Random del ui/Taquerías.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/Cosas Random del ui/Sprite de la barra de vida.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TaqueroBossBattle.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Amugusjugable.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/iniciarvainaloca.gd" type="Script" id=6]
[ext_resource path="res://Fuentes/KGBlankSpaceSolid.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sonidos/Musica/Boss Blattle 1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scripts/ElTaquero2.gd" type="Script" id=9]
[ext_resource path="res://Scripts/ijonbsdf.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640.59, 9.02874 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 179.431, 516.784 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.8824, 482.412 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 768, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 896, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=42]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "aparecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 39, 0 )

[sub_resource type="Animation" id=40]
resource_name = "Aparecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 23.8333, 274.975 )

[sub_resource type="DynamicFont" id=44]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=45]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=46]
resource_name = "aparecerrr"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.980392 ) ]
}

[sub_resource type="Animation" id=47]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -48.467 ]
}

[sub_resource type="Animation" id=48]
resource_name = "aasfgfqadcsx"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -48.467, -5.191 ]
}

[sub_resource type="DynamicFont" id=50]
size = 19
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 513.0 ]
}

[node name="Taquerías" type="Sprite" parent="."]
position = Vector2( 513, 298.5 )
scale = Vector2( 0.796875, 0.829167 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Taquerías"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Taquerías/StaticBody2D"]
position = Vector2( 1.73047, 202.593 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Taquerías/StaticBody2D"]
position = Vector2( 819.451, 35.5779 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Taquerías/StaticBody2D"]
position = Vector2( -673.882, 82.6131 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 513, 65 )
scale = Vector2( 10, 4 )
frames = SubResource( 38 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/RESET = SubResource( 42 )
anims/aparecer = SubResource( 43 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 895, 374 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
light_mask = 4
position = Vector2( 3, 76 )
shape = SubResource( 49 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="ElTaquero2" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/ElTaquero2"]
anims/Aparecer = SubResource( 40 )
anims/RESET = SubResource( 41 )

[node name="Amogus" parent="." instance=ExtResource( 5 )]
position = Vector2( 44, 412 )
Speed = 200.0
jumpforce = 500.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 513, 298.5 )
scale = Vector2( 0.796875, 0.829167 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -508.235, -88.6432 )
shape = SubResource( 39 )
one_way_collision_margin = 0.0

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_top = 48.0
margin_right = 682.0
margin_bottom = 115.0
rect_scale = Vector2( 1, 0.6 )
custom_fonts/font = SubResource( 44 )
text = "EL TAQUERO "

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/RESET = SubResource( 45 )
anims/aparecerrr = SubResource( 46 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -48.467

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer"]
anims/RESET = SubResource( 47 )
anims/aasfgfqadcsx = SubResource( 48 )

[node name="Button" type="Button" parent="."]
margin_right = 98.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 50 )
text = "<- Atras"
script = ExtResource( 10 )

[connection signal="animation_finished" from="AnimatedSprite" to="Area2D" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
